fixed title image so that visibility is responsive

--- a/my_website/src/App.css
+++ b/my_website/src/App.css
@@ -4,7 +4,7 @@
   .App-content {
     display: grid;
     min-height: 100%;
-    max-width: 100%;
+    min-width: 100%;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 200px 1fr 1fr 100px;
     font-family: 'Roboto Slab', serif;
@@ -34,6 +34,10 @@
     color: black;
   }
 
+  .title-image {
+    display: none;
+  }
+
   .about-column-right {
     grid-area: a;
     padding: 5vh;
@@ -49,16 +53,9 @@
 
   footer {
     padding: 5vh;
-
     grid-area: f;
     padding: 10px;
     background-color: black;
-  }
-
-  .pencil-banner {
-    width:100%;
-    height:100%;
-    /* object-fit: contain; */
   }
 
   .blog-title {
@@ -85,6 +82,8 @@
     "f f f f";
   }
 
+
+
   /* .header {
     display: flex;
     align-items: center;
@@ -96,6 +95,7 @@
   .title-image {
     grid-area: i;
     background-color: #d3d3d3;
+    display: block;
   }
 
   .about-me-text {
